intro to the tensions

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -263,6 +263,8 @@ https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/
 
 ### Description of levels of activity illustrated using the vignette
 
+The following sections outline different scopes of activity to ground the reader in the overall activity and introduce later tensions between system elements.
+
 <!-- The following sections describe of the vignette above focusing on the overall activity and its place within evolution of learning design.
 
 It will use concepts from activity theory to describe elements of the activity system. Activity theory allows researchers to identify intersecting or nested systems of activity with varied goals.
@@ -271,7 +273,9 @@ Subsequent analysis of the identified activity systems allows both the researche
 
 <!-- ALTERNATIVE SIMPLIER INTRO TO THIS SECTION -->
 
-The following sections outline different scopes of activity to ground the reader in the overall activity and introduce later tensions between system elements. Each section follows a pattern: the activity is described in general, then examples of activity at that scope from the vignette above are described, ending with brief analysis or signposting to where the activity in explored in greater depth.
+
+
+<!-- Each section follows a pattern: the activity is described in general, then examples of activity at that scope from the vignette above are described, ending with brief analysis or signposting to where the activity in explored in greater depth. -->
 
 <!-- The following descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity [Engestrom][Cole]. -->
 
@@ -285,7 +289,7 @@ As explored in the literature review, there are several wider objectives of the 
 
 NOTE - CAN ADD THE OBJECTIVES INTO THE ARROWS ON THE DIAGRAM
 
-While the limited example above of Toby's activity illustrates fun, additional data from interviews with this child and family back the broad goals above. [develop - perhaps an appendix or quotes]
+<!-- While the limited example above of Toby's activity illustrates fun, additional data from interviews with this child and family back the broad goals above. [develop - perhaps an appendix or quotes] -->
 
 
 <!-- As previously explored this mirrors the Activity, Action and Operation hierarchy. -->
@@ -361,11 +365,12 @@ Overall activity at this level was driven by learners setting goals and requesti
 
 <!-- Toby builds his competence in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. -->
 
-By this stage, participant had access to a diversity of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette above I outline the two main sources of help at the level of adding a new feature to the game.
+By this stage, participant had access to a diversity of tools, resources and processes. A summary table with short descriptions and links to the resources used are included as an appendix 4.x.  Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game. In the vignette above I outline the two main sources of help at the level of adding a new feature to the game.
 
     "Mick: So we’ve got two ones. Here’s the tutorial and there’s the examples of code so you can compare what you are doing and see where the new code should be placed."
 
 In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as others in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. In contrast, others participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
+
 
 <!-- While some game patterns were simple to add, e.g. altering the location of platforms, other more complicated features involved several stages and varied tools to implement. The next section describes these stages as discrete code and design structures. -->
 
@@ -386,24 +391,30 @@ In the course of the vignette above, Toby chose to access only a code example of
 
 <!-- Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets -->
 
-#### Smaller objective / actions - Implementing discrete code and design structures
+#### Smaller objectives and actions - Implementing discrete code and design structures
 
 <!-- For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element. -->
 
-More complicated features involved several stages and varied tools to implement. The next section describes these stages as discrete code and design structures.
+While the previous section focused on a mid-level scope of implementing game features, more complicated patterns involved several stages and varied tools to implement. Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby undertakes certain chains of processes in a fluid way that shows that actions had become operations. For example, his quick navigation between different areas of the game code, the game preview window and  sources of documentation.
 
-NOTE - Overall description and justification of this section.
+In contrast, some tasks are new to Toby and are performed more hesitantly. In the example above Toby is careful is hesitant, checking and rechecking the process of copying and pasting new code into his game from a specially prepared code example which matches the game template he is working on.
 
-Toby undertakes some tasks fluently, for example his the quick navigation between different areas of the game code, the game preview window and  sources of documentation. Using the terminology of Leontiev [-@leontiev_activity_2009], in the example above Toby was undertaking certain chains of processes in a fluid way that shows that actions had become operations. As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers.
-
-In contrast, some tasks are new to Toby and are performed more hesitantly. In the example above Toby is careful is hesitant, checking and rechecking the process of copying and pasting new code into his game from a specially prepared code example which matches the game template he is working on. After inserting the code which adds a moving enemy to the game, Toby spends five minutes altering the variables involved to match his design and to create a level of challenge that he is happy with.
+<!--NOTE As a facilitator of a community I aim to notice these transitions as I aim to use the proficiency of participants to help distribute the process of helping peers. -->
 
 
-Toby makes quick progress. one factor here is willingness to make mistakes. There is a confidence here in undoing mistakes, commenting out new code to return to previous behaviour.
+Identifying shifts in participant activity in terms of scope aids analysis of the complex and interwoven cultural, social and personal actions [@rogoff_observing_1995]. Above Toby shifts between to the wide activity of making a game and sharing it with peers to the narrower action on implementing a concrete code structure. DEVELOP?
 
-The trial and error approach also yields benefits, a mistake in the values edited creates an unexpected result of the enemy moving vertically instead of horizontally. Toby embraces this mistake and shares his account of this happy accident enthusiastically.
+A key concept in 3GAT is that analysis of community processes must recognise that activity shift and transform over time.  The next section offers a concise description of the evolution of tool use in different phases of the study with an aim to situate later analysis of emerging tensions in the use of tools, resources and processes in the subsequent section.
 
-The trajectory we see for Toby shows one example of the shift between to the wide activity of making a game and sharing it with peers to the narrower action on implementing a concrete code structure.
+
+<!-- In this thesis, chapter six has a focus on cultural aspects of making a game together and chapter five explores social organisation around the activity of adding game design patterns chapter five.  -->
+
+<!-- After inserting the code which adds a moving enemy to the game, Toby spends five minutes altering the variables involved to match his design and to create a level of challenge that he is happy with. -->
+
+<!-- Toby makes quick progress. one factor here is willingness to make mistakes. There is a confidence here in undoing mistakes, commenting out new code to return to previous behaviour.
+
+The trial and error approach also yields benefits, a mistake in the values edited creates an unexpected result of the enemy moving vertically instead of horizontally. Toby embraces this mistake and shares his account of this happy accident enthusiastically. -->
+
 
 
 <!-- NOTE
@@ -416,11 +427,8 @@ This has utility to both researcher and learning designer. The observations of t
 
 NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and possibly Bevan and Petrich -->
 
-### Using scopes of activity as a tool for analysis.
 
-The identification of different scopes of activity systems aids analysis of the complex and interwoven cultural, social and personal actions [@rogoff_observing_1995].
 
-In this thesis, chapter six has a focus on cultural aspects of making a game together and chapter five explores social organisation around the activity of adding game design patterns chapter five. This chapter broadly aligns with a personal dimension of activity, specifically the use of tools and resources via the description of key contradiction in emerging game making activities. The next section begins to chart emerging tensions via a concise description of the evolution of tool use in different phases of the study.
 
 
 <!-- to highlight possible tensions and contradictions between competing goals of interrelated activity systems. -->
@@ -527,11 +535,11 @@ The concept of the feel of the game or the challenges maps to the Dynamics of MD
 
 ### P2: The game making using suggested patterns.
 
-By the beginning of P2 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the supporting resources that stemmed from participant feedback and detailed reading of relevant literature.
+By the beginning of P2 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the template that stemmed from participant feedback and my reflections. Key additions at this stage to support the use of a template were a collection of tutorials and code examples illustrating key game features that had been requested by participants.
 
-OUTLINE RESOURCES USED AT THIS STAGE CLEARLY AT SOME POINT IN THIS CHAPTER.
+The collection of game patterns were presented in a web page together with the starting template and a link to an online book collecting the process into step-by-step chapter based tutorials.
 
-One key addition brought to start of P3 was a more coherent list of tutorials and code examples illustrating key game features that had been requested by participants, as outline above. The collection of game patterns were presented in a web page together with the starting template and a link to an online book collecting the process into step-by-step chapter based tutorials.
+The resources are explored in more depth in sections three and four below. A more complete description of the resources used in P2 and P3 are included in appendix 4.x.
 
 ### P3: Adding a process drama
 
@@ -549,18 +557,12 @@ I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade to
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
-This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress.
+This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress. The processes here aligns DBR in that the surfacing of tensions and charting the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. 
+
+The first two tensions address issues of identity, ambition, and attempts to align with curricular concepts. The remaining sections detail a responses to key contradictions in the tool set of the early design, specifically addressing authoring tools and supporting documentation.
+
 
 <!-- In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways. -->
-
-The first outlines tensions due to clashes of identity and ambition. Responses are  outlined briefly here but explored in more depth in chapter six.
-
-The second is details resources created to align the game making programme school and curricular activities.  
-
-Two remaining sections key range of responses to key contradictions in the tool set of the early design, specifically addressing authoring tools and supporting documentation. In these sections, I explore tensions involving authenticity as a precursor to exploring their relationship with participants experience of agency.
-
-**Note on methodology**
-This section is written from my own perspectives to inform discussion on design tensions. The process here is driven not only from user feedback but also on a more intuitive experience as an experienced facilitator in this field. I also draw on the tensions explored in the previous exploration of fellow participants.
 
 
 <!-- As outlined in the table above I carried out four stages of workshops and development with home educator families. I will outline decisions behind the design activities at key stage of activity   -->
