--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -557,7 +557,7 @@ I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade to
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
-This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress. The processes here aligns DBR in that the surfacing of tensions and charting the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. 
+This section examines design contradictions between system elements and tensions experience by participants which developed into conflicts which significant in stopping participant progress. The processes here aligns DBR in that the surfacing of tensions and charting the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002].
 
 The first two tensions address issues of identity, ambition, and attempts to align with curricular concepts. The remaining sections detail a responses to key contradictions in the tool set of the early design, specifically addressing authoring tools and supporting documentation.
 
@@ -581,30 +581,37 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 <!-- NOTE - DEVELOP THIS ASPECT OF INCLUSIVE ENVIRONMENT TO REDUCE STRESS - MOVE FROM NEXT CHAPTER?  -->
 
 
-## 1. Identity hardcore coding & dysfunctional group work
+## 1. Conflicts due to identity clashes and dysfunctional group work
 
-**Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),**
+<!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),** -->
 
-For some families and individual participants there were conflicts to do with a sense of anxiety and alienation from the group coding environment and associated peer working dynamics.
+This conflict involved accumulating tensions which resulted in families feeling anxiety and alienation from the group coding environment and associated peer working dynamics.
 
-One family dropped out and in their exit interview they shared that at one point we looked around and just saw people doing hardcore coding and we no longer felt at home in the environment. In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding.
+I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework.
 
-The value of playfulness is illustrated with one exit interview with a parent where they shared their reasons for leaving the program. At one stage after a week where they had missed a session, their family looked around and saw other groups involved in 'hardcore coding' and no longer felt at home. They compared this previous sessions which had more fun and group oriented activity.
+The shared in feedback (see appendix 4.x) the moment that decided their withdrawal. At one point they looked around and just saw people doing hardcore coding and no longer felt at home in the environment. In early sessions the family members had planned design on paper and created digital pixel art. However in later sessions, they were reliant on others to implement code changes for their imagined game. In my journal notes I reflect that this experience was in a session where, due to a sense of urgency to complete games, I had omitted warm up activities to immediately support to help some participants debug code errors.
 
-In my journal notes I reflect that his incident happened during a session where I had not played customary drama games to create an inclusive environment. That week I had omitted them as I felt a sense of urgency coming from families to solve their problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors.
+To briefly summarise this dynamic using the language of 3GAT we can locate tensions between competing objectives. The shift from paper design stage with its greater freedom of choice and imagination to the technical limits and challenges appears to have created too great a rupture between this families objective to be creative and an uncompromising technical reality.  
 
-In previous sessions, members of this family were able to engage in planing via sketching on paper and in creating pixel art. However in later sessions, they were reliant on others to implement code changes for their imagined game due to way the improvised group roles had emerged.
+This experience aligns with research in this area explored in the literature review which explore pedagogies to address barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. I have shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six.
 
-The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next.
 
-DEVELOP WITH LIT
-To briefly summarise this dynamic using the language of 3GAT and agency we can say... x, y z
-
-This aligns with research in this area explored in the LR which conceive coding practices as alien to certain groups in particular, and stress the import ance of x.
+<!-- NOTE -
 DEVELOP THIS IN LIT REVIEW - Start here [@kafai_constructionist_2015-1]
 
-I have shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six.
+Studies with pedagogies addressing barriers to do with identity and computer cultures
+-->
 
+
+<!-- The value of playfulness is illustrated
+The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. -->
+
+<!-- I had not played customary drama games to create an inclusive environment.
+
+That week I had omitted them as I felt a sense of urgency coming from families to solve their problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors. -->
+
+
+<!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
 ## 2. Facilitator conflict addressing the Play Paradox
 
 This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents that teachers may want students to find [@hoyles_pedagogy_1992]. Anaylysis of my journal notes shows that I spent significant time attempting to resolve a  conflict between the informal choice driven process and aligning and supporting students' awareness of links to curriculum content on computational and systems thinking.
