--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -612,9 +612,9 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 
 
 <!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
-## 2. Facilitator conflict addressing the Play Paradox
+## 2. Facilitator conflict addressing tensions between privileging participant choices or underlying computing concepts
 
-This section addresses my interventions to resolve the play paradox between learner expression and choice and the curricular contents that teachers may want students to find [@hoyles_pedagogy_1992]. Anaylysis of my journal notes shows that I spent significant time attempting to resolve a  conflict between the informal choice driven process and aligning and supporting students' awareness of links to curriculum content on computational and systems thinking.
+Analysis of my journal notes shows that I spent significant time exploring how best to support participant awareness of underlying computational and systems thinking concepts without detracting from their valuable experiential progress. This section addresses my interventions to resolve the tension, previous explored in the literature review, between learner expression and choice and the curricular contents  [@hoyles_pedagogy_1992].
 
 The rationale behind this is that I wanted to create resources and processes which are of potential value to practioners in the UK classroom. One of the audiences for this study were trainee computing teachers in my university faculty. The LR briefly explored ways in which digital game making is commonly aligned with curricular areas [@kafai_connected_2016]. For me the challenge was to find a way to support participants to explore these concepts without detracting from the choice oriented learning design.  
 
