--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -614,62 +614,20 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 <!-- In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding. -->
 ## 2. Facilitator conflict addressing tensions between privileging participant choices or underlying computing concepts
 
+In this section I outline key tensions in the design that two interventions involving different forms of mapping have the potential to address in more formal teaching environments.
+
+While the focus on this research is informal environment, I wanted to create resources and processes which are of potential value to practitioners in the UK classroom. The LR briefly explored ways in which digital game making is commonly aligned with curricular areas [@kafai_connected_2016]. For me the challenge was to find a way to support participants to explore these concepts without detracting from the choice oriented learning design.  
+
 Analysis of my journal notes shows that I spent significant time exploring how best to support participant awareness of underlying computational and systems thinking concepts without detracting from their valuable experiential progress. This section addresses my interventions to resolve the tension, previous explored in the literature review, between learner expression and choice and the curricular contents  [@hoyles_pedagogy_1992].
 
-The rationale behind this is that I wanted to create resources and processes which are of potential value to practioners in the UK classroom. One of the audiences for this study were trainee computing teachers in my university faculty. The LR briefly explored ways in which digital game making is commonly aligned with curricular areas [@kafai_connected_2016]. For me the challenge was to find a way to support participants to explore these concepts without detracting from the choice oriented learning design.  
+The conflict in this example is from my own perspective. There are two sides of contradiction, one is my perception of the contradiction between curriculum and choice. Later, another conflict which manifested as my hesitancy introducing activities using the new tools is also explored.
 
-This conflict provoked me to create resources which could serve to pull participants towards more curricular goals. I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom.
-
-SIGNPOSTING WHY THIS SECTION IS USEFUL HERE
-
-NOTE - There are two sides of contradiction, one is the clash between curriculum and choice, the other is in my hesitancy introducing activities using the new tools of the maps due to potential overload and not enough time.
+<!-- This conflict provoked me to create resources which could serve to pull participants towards more curricular goals. I adapted and extended resources to suit use in more formal learning environments, e.g. particularly a secondary computing classroom. -->
 
 <!-- stylised in a way that mirrored a map used for navigation in a quest-themed computer game.
 
 As learners traced a trail between the different island/missions they had visited, the map provoked learners to reflect on their journey and progress. However, this approach may be too labour and time intensive for many class environments.
 -->
-
-### Using Physical Maps of Missions as Game Design Patterns
-
-I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
-
-![learning islands](./Pictures/navigational_paper_map.png){width=95%}
-![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png){width=95%}
-_Missions as Islands_
-
-My motivations for this intervention were that it encourage a sense of community and peer learning that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with.
-
-**Minimal evidence in this study**
-
-The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions and present patterns to encourage learners to start with ones that involve simple code changes but return a large change in terms of gameplay experience.
-
-Despite minimal evidence due to a factor later explored, there were some observations.
-
-| **Transcript**| **Description**|
-|----------------|------------------|
-|Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  | Mick cuts a out an image from [^4] representing a GDP of key and doors.   |
-|  Olivia(c): So I've gone really far away on the map. <br/>   |  Olivia(c) quickly places her marker on that image and grins. Other parents and children to the right and left of her look at her marker.  |
-| Mick(f): Yeah.  |  Mick smiles too whilst walking to get and glue another cut out. |
-|  Olivia(c): Heh!  | Olivia walks back to her mother and stretches out her arms to her mother who picks her up. Olivia whispers in her mother's ear  |
-| Mick(f): There should be some blue tack if you are struggling to make your character stand up.   | Mick walks around the back of the group and sticks another GDP pattern on a different pre-drawn island.  Roxanne(p) notices Agnes's(c) falling character and passes the child blue tack to help.  |
-| Rozanne(p): Oh that's something you were wanting to do |  Roxanne points at a cut out that Mick has just stuck down |
-|  Richie(c): I like the idea of making the enemies move |  Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter? |
-|  Richie(c): No. |   |
-|  Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.  | Roxanne  waves sheet and smiles at Mick and laughs.   |
-|  Mick(f): Great that's good. We've got some sheets that I would recommend. That are almost like gateways to other places. One is to make your character move  when it moves around the screen.  | Mick moves hands when saying make your character move, indicating animation.   |
-|  Mick(f): Another is to make your enemies move around the screen to make it a bit harder. I know you guys have done that.  | Mick moves a pointed hand to indicate an enemy moving on the screen and then points to Clive and Pearl to indicate "you guys".  
-|
-
-<!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
-
-<!-- **Lack of reflection and moments to reinforce what is being learnt.** To support younger coders unsure what to do next or who struggle to stay on task, I sought to create another kind of map to help them navigate their game making journey. -->
-
-
-MOVE LATER? FINAL CHAPTER?
-
-It is of value to out like key tensions in the design that maps have the potential to address in more formal teaching environments. I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. This theme is also explored later in this section.
-
-OTHER RESEARCH?
 
 #### Learning Dimensions Map
 
@@ -736,10 +694,87 @@ _Map of Learning Dimensions of the 3M Game Making Approach_
  - (see Eriksson and Bjork)
  - Draw on material and critique in chapter on semantic profiles / waves. -->
 
+
+
+ ### Using Physical Maps of Missions as Game Design Patterns
+
+ I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
+
+ ![learning islands](./Pictures/navigational_paper_map.png){width=95%}
+ ![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png){width=95%}
+ _Missions as Islands_
+
+My motivations for this intervention were that it encourage a sense of community and peer learning that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with.
+
+The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions.
+
+
+    Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  ( Mick cuts a out an image from [^4] representing a GDP of key and doors.)     Olivia(c): So I've gone really far away on the map.
+
+The process of mapping the difficulty is something that the child picks up on here.
+
+Moments after we see a parent using the map and the resources to help her child fix a goal for the session.
+
+
+    Rozanne(p): Oh that's something you were wanting to do	(Roxanne points at a cut out that Mick has just stuck down.)
+    Richie(c): I like the idea of making the enemies move.
+    Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter?
+    Richie(c): No.
+    Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.	(Roxanne waves sheet and smiles at Mick.)
+
+
+The new resources seem welcomed by the parent. This is probably as in previous sessions there had been conflict between them about goals.
+
+SUM UP MORE HERE. 
+
+I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. This theme is also explored later in this section.
+
+
+
+
+MOVE TO APPENDIX  - PULL OUT TWO PERHAPS.
+
+ | **Transcript**| **Description**|
+ |----------------|------------------|
+ |Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  | Mick cuts a out an image from [^4] representing a GDP of key and doors.   |
+ |  Olivia(c): So I've gone really far away on the map. <br/>   |  Olivia(c) quickly places her marker on that image and grins. Other parents and children to the right and left of her look at her marker.  |
+ | Mick(f): Yeah.  |  Mick smiles too whilst walking to get and glue another cut out. |
+ |  Olivia(c): Heh!  | Olivia walks back to her mother and stretches out her arms to her mother who picks her up. Olivia whispers in her mother's ear  |
+ | Mick(f): There should be some blue tack if you are struggling to make your character stand up.   | Mick walks around the back of the group and sticks another GDP pattern on a different pre-drawn island.  Roxanne(p) notices Agnes's(c) falling character and passes the child blue tack to help.  |
+ | Rozanne(p): Oh that's something you were wanting to do |  Roxanne points at a cut out that Mick has just stuck down |
+ |  Richie(c): I like the idea of making the enemies move |  |
+|Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter? |   |   
+ |  Richie(c): No. |   |
+ |  Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.  | Roxanne  waves sheet and smiles at Mick and laughs.   |
+ |  Mick(f): Great that's good. We've got some sheets that I would recommend. That are almost like gateways to other places. One is to make your character move  when it moves around the screen.  | Mick moves hands when saying make your character move, indicating animation.   |
+ |  Mick(f): Another is to make your enemies move around the screen to make it a bit harder. I know you guys have done that.  | Mick moves a pointed hand to indicate an enemy moving on the screen and then points to Clive and Pearl to indicate "you guys".  
+ |
+
+ <!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
+
+ <!-- **Lack of reflection and moments to reinforce what is being learnt.** To support younger coders unsure what to do next or who struggle to stay on task, I sought to create another kind of map to help them navigate their game making journey. -->
+
+
+
+
+
+
+
 #### Observations on tensions which the learning and navigational maps have potential to address.
 
 
-My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following table aims to summarise the alignment of the potential of this work with other research.
+My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following section aims to summarise the alignment of the potential of this work with existing research.
+NOTE - more work to link this succinctly is needed.
+
+<!-- NOTE - Reduce this down to text - as too close to the end table. And reduce in significance. -->
+
+NOTE - Also add the following point.
+
+Facilitator stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.
+Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators
+
+- It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways.
+
 
 
 | **Tension identified**| **Commentary**|
