--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -677,7 +677,7 @@ Your mission is to apply the following pattern to your game. There are supportin
 
 BOX ENDS
 
-Because these frameworks can also help students to navigate their own learning journey the effort serves a double purpose.
+While the process of creating these cards of game design patterns linked to the underlying framework is labour intensive, the process offers several potential benefits which may merit the effort, including linking curricular concepts to more concrete experience and aid in navigating the learning experience. 
 
 <!--
 While this is an informal way of using maps the are other approaches that are more formal including one called a concept map which is a visual representation of target specialised knowledge. There is a section on concept maps as part of the teach computing website here. https://blog.teachcomputing.org/how-we-teach-computing/. -->
@@ -696,63 +696,43 @@ _Map of Learning Dimensions of the 3M Game Making Approach_
 
 
 
- ### Using Physical Maps of Missions as Game Design Patterns
+### Using Physical Maps of Missions as Game Design Patterns
 
- I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
+I used flip chart paper and print outs to draw a coastal landscape with GDPs represented as different islands.  I asked learners to create and personalise a movable marker representing themselves. When learners selected their next mission, they moved their counter to the relevant island. Thus learners had to be intentional about their next goal and were implicitly encouraged to stick to it.
 
- ![learning islands](./Pictures/navigational_paper_map.png){width=95%}
- ![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png){width=95%}
- _Missions as Islands_
+![learning islands](./Pictures/navigational_paper_map.png){width=95%}
+![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png){width=95%}
+_Missions as Islands_
 
 My motivations for this intervention were that it encourage a sense of community and peer learning that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with.
 
 The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions.
 
 
-    Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  ( Mick cuts a out an image from [^4] representing a GDP of key and doors.)     Olivia(c): So I've gone really far away on the map.
+  Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  ( Mick cuts a out an image from [^4] representing a GDP of key and doors.)     Olivia(c): So I've gone really far away on the map.
 
 The process of mapping the difficulty is something that the child picks up on here.
 
 Moments after we see a parent using the map and the resources to help her child fix a goal for the session.
 
 
-    Rozanne(p): Oh that's something you were wanting to do	(Roxanne points at a cut out that Mick has just stuck down.)
-    Richie(c): I like the idea of making the enemies move.
-    Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter?
-    Richie(c): No.
-    Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.	(Roxanne waves sheet and smiles at Mick.)
+  Rozanne(p): Oh that's something you were wanting to do	(Roxanne points at a cut out that Mick has just stuck down.)
+  Richie(c): I like the idea of making the enemies move.
+  Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter?
+  Richie(c): No.
+  Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.	(Roxanne waves sheet and smiles at Mick.)
 
 
 The new resources seem welcomed by the parent. This is probably as in previous sessions there had been conflict between them about goals.
 
-SUM UP MORE HERE. 
+SUM UP MORE HERE.
 
 I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. This theme is also explored later in this section.
 
 
+<!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
 
-
-MOVE TO APPENDIX  - PULL OUT TWO PERHAPS.
-
- | **Transcript**| **Description**|
- |----------------|------------------|
- |Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  | Mick cuts a out an image from [^4] representing a GDP of key and doors.   |
- |  Olivia(c): So I've gone really far away on the map. <br/>   |  Olivia(c) quickly places her marker on that image and grins. Other parents and children to the right and left of her look at her marker.  |
- | Mick(f): Yeah.  |  Mick smiles too whilst walking to get and glue another cut out. |
- |  Olivia(c): Heh!  | Olivia walks back to her mother and stretches out her arms to her mother who picks her up. Olivia whispers in her mother's ear  |
- | Mick(f): There should be some blue tack if you are struggling to make your character stand up.   | Mick walks around the back of the group and sticks another GDP pattern on a different pre-drawn island.  Roxanne(p) notices Agnes's(c) falling character and passes the child blue tack to help.  |
- | Rozanne(p): Oh that's something you were wanting to do |  Roxanne points at a cut out that Mick has just stuck down |
- |  Richie(c): I like the idea of making the enemies move |  |
-|Roxanne(p): Ok, there's a worksheet here about that. So you don't want to any any heath meter? |   |   
- |  Richie(c): No. |   |
- |  Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.  | Roxanne  waves sheet and smiles at Mick and laughs.   |
- |  Mick(f): Great that's good. We've got some sheets that I would recommend. That are almost like gateways to other places. One is to make your character move  when it moves around the screen.  | Mick moves hands when saying make your character move, indicating animation.   |
- |  Mick(f): Another is to make your enemies move around the screen to make it a bit harder. I know you guys have done that.  | Mick moves a pointed hand to indicate an enemy moving on the screen and then points to Clive and Pearl to indicate "you guys".  
- |
-
- <!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
-
- <!-- **Lack of reflection and moments to reinforce what is being learnt.** To support younger coders unsure what to do next or who struggle to stay on task, I sought to create another kind of map to help them navigate their game making journey. -->
+<!-- **Lack of reflection and moments to reinforce what is being learnt.** To support younger coders unsure what to do next or who struggle to stay on task, I sought to create another kind of map to help them navigate their game making journey. -->
 
 
 
