--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -677,7 +677,7 @@ Your mission is to apply the following pattern to your game. There are supportin
 
 BOX ENDS
 
-While the process of creating these cards of game design patterns linked to the underlying framework is labour intensive, the process offers several potential benefits which may merit the effort, including linking curricular concepts to more concrete experience and aid in navigating the learning experience. 
+While the process of creating these cards of game design patterns linked to the underlying framework is labour intensive, the process offers several potential benefits which may merit the effort, including linking curricular concepts to more concrete experience and aid in navigating the learning experience.
 
 <!--
 While this is an informal way of using maps the are other approaches that are more formal including one called a concept map which is a visual representation of target specialised knowledge. There is a section on concept maps as part of the teach computing website here. https://blog.teachcomputing.org/how-we-teach-computing/. -->
@@ -704,17 +704,14 @@ I used flip chart paper and print outs to draw a coastal landscape with GDPs rep
 ![learning islands]({{ site.imgurl }}/_posts/thesis_chapters/Pictures/navigational_paper_map.png){width=95%}
 _Missions as Islands_
 
-My motivations for this intervention were that it encourage a sense of community and peer learning that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with.
+My motivations for this intervention were that it encourage a sense of community and peer learning, to help learners navigate their design experience and that the process would encourage reflect on the coding concepts or other learning dimensions that they had been working with.
 
 The use of space on the map on which GDP were arranged aimed to communicate which patterns were more complicated to implement.  Starting patterns limited the maximum complexity of missions.
 
 
   Mick(f): I'm putting the ones that are hardest further away from our home island. So, because keys and doors is quite tricky, I'm going to put that one over there in the corner, if that's one that you're working on.  ( Mick cuts a out an image from [^4] representing a GDP of key and doors.)     Olivia(c): So I've gone really far away on the map.
 
-The process of mapping the difficulty is something that the child picks up on here.
-
-Moments after we see a parent using the map and the resources to help her child fix a goal for the session.
-
+The process of mapping the difficulty is something that the child picks up on here. Moments after we see a parent using the map and the resources to help her child fix a goal for the session.
 
   Rozanne(p): Oh that's something you were wanting to do	(Roxanne points at a cut out that Mick has just stuck down.)
   Richie(c): I like the idea of making the enemies move.
@@ -722,13 +719,14 @@ Moments after we see a parent using the map and the resources to help her child 
   Richie(c): No.
   Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.	(Roxanne waves sheet and smiles at Mick.)
 
+The new resources seem welcomed by the parent. This is probably as in previous sessions there had been conflict between them about goals. The process of aiding reflection and meta-cognition through the use of visual materials in the form of a map aligns with inclusive pedagogical design principles of UDL in that it aid the use of diverse forms of reflection and navigation. In chapter six, I explore the use of a process drama to achieve similar aims.
 
-The new resources seem welcomed by the parent. This is probably as in previous sessions there had been conflict between them about goals.
+While it is beyond the remit of this thesis to examine the impact of these processes in more curricular focused environments, the following section offers a synthesis of the ideas in explored in this chapter and alignment with existing research.
 
-SUM UP MORE HERE.
 
-I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. This theme is also explored later in this section.
-
+<!--
+MOVE TO END CHAPTER?
+I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. -->
 
 <!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
 
@@ -736,12 +734,7 @@ I am currently investigating replicating the use of maps process using online to
 
 
 
-
-
-
-
 #### Observations on tensions which the learning and navigational maps have potential to address.
-
 
 My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following section aims to summarise the alignment of the potential of this work with existing research.
 NOTE - more work to link this succinctly is needed.
@@ -750,10 +743,12 @@ NOTE - more work to link this succinctly is needed.
 
 NOTE - Also add the following point.
 
+- It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways.
+
 Facilitator stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.
 Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators
 
-- It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways.
+
 
 
 
