--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -719,7 +719,7 @@ The process of mapping the difficulty is something that the child picks up on he
   Richie(c): No.
   Roxanne(p): At least not right now. You want to to do this, on a sheet, right here, here you go.	(Roxanne waves sheet and smiles at Mick.)
 
-The new resources seem welcomed by the parent. This is probably as in previous sessions there had been conflict between them about goals. The process of aiding reflection and meta-cognition through the use of visual materials in the form of a map aligns with inclusive pedagogical design principles of UDL in that it aid the use of diverse forms of reflection and navigation. In chapter six, I explore the use of a process drama to achieve similar aims.
+The new resources seem welcomed by the parent. This is probably as in previous sessions there had been conflict between them about goals. The process of aiding reflection and meta-cognition through the use of visual materials in the form of a map aligns with inclusive pedagogical design principles of UDL in that it provides means of action and expression. In chapter six, I explore the use of a process drama to achieve similar aims.
 
 While it is beyond the remit of this thesis to examine the impact of these processes in more curricular focused environments, the following section offers a synthesis of the ideas in explored in this chapter and alignment with existing research.
 
@@ -736,7 +736,14 @@ I am currently investigating replicating the use of maps process using online to
 
 #### Observations on tensions which the learning and navigational maps have potential to address.
 
-My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following section aims to summarise the alignment of the potential of this work with existing research.
+
+
+
+
+
+My experience of the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The following section aims to summarise the alignment of the potential of this work with existing research
+
+
 NOTE - more work to link this succinctly is needed.
 
 <!-- NOTE - Reduce this down to text - as too close to the end table. And reduce in significance. -->
@@ -745,21 +752,29 @@ NOTE - Also add the following point.
 
 - It may not be clear how teachers can best support the direction of learners - addressed by the map linked to the collection of GDP used to support and identify possible pathways.
 
-Facilitator stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.
-Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators
+Facilitator stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games. As a response, it may be practical to limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators.
+
+
+Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.
+
+
+Challenges adapting resources to a curriculum environment
+There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map.
 
 
 
+Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   
+Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)
 
-
+<!--
 | **Tension identified**| **Commentary**|
 |----------------|------------------|
 |Facilitator stress if they are not able to support a very diverse set of features demanded by students working on diverse kinds of games.  | Limit the type of game to one kind. Offer a significant but limited menu of missions that users can add. Offer written and visual support documents which learners can access independently of facilitators|
 |  Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning. | A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.  |   |
 |  Challenges adapting resources to a curriculum environment |  There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map. |   
-|Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   |  Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)|   
+|Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.   |  Systems related design patterns were identified and placed in a challenge themed section. Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context. (outlined in Methods chapter -  use Schnell & GSM literature = their terminology is Game elements)|    -->
 
-While the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The process of using these resources to align and highlight the design activities to underlying concepts is not explored in this study from the perspective of learners. Ultimately, I did not introduce the resources consistently with the learners of this study, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities. In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts.
+
 
 
 <!-- NOTE EXPAND IF USEFUL -->
@@ -775,6 +790,13 @@ Examples include;
 - navigation / organisational support - use of a physical map.
 
 For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
+
+
+**Link Section**
+
+While the process of adapting the learning design to the needs of more formal settings supports existing research in this area. The process of using these resources to align and highlight the design activities to underlying concepts is not explored in this study from the perspective of learners.
+
+Ultimately, I did not introduce the resources consistently with the learners of this study, instead prioritising time spent in on-going hands on experimentation, peer learning and playful activities. In retrospect, my inaction seems appropriate to the informal context of this environment. It reflects the lack of external motivation for participants and myself to align to curricular concepts.
 
 
 ## 3. Tensions due to lack of access and familiarity to tools and processes
